# json2nix

./: .gitignore  Cargo.toml  LICENSE  README.adoc  default.nix  flake.nix  package.nix  packages.nix  rust-toolchain.toml  rustfmt.toml  shell.nix
.github/workflows/: ci.yml
json2nix/: Cargo.toml
json2nix-cli/: Cargo.toml
json2nix-cli/src/: main.rs
json2nix-web/: Cargo.toml  index.html
json2nix-web/src/: app.rs  checkbox.rs  copy_button.rs  main.rs  number_input.rs
json2nix/src/: escape.rs  indent.rs  lib.rs
