[workspace]
resolver = "3"
members = [
  "json2nix",
  "json2nix-cli",
  "json2nix-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["SteveBinary"]
repository = "https://github.com/SteveBinary/json2nix"
license = "MIT"

[workspace.dependencies]
json2nix = { path = "json2nix" }

clap = { version = "4.5.53", features = ["derive"] }
leptos = { version = "0.8.14", features = ["csr"] }
leptos-use = "0.17.0"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
wasm-bindgen = "=0.2.105"
